--- a/identity/ui/css/purpose.css
+++ b/identity/ui/css/purpose.css
@@ -1,13 +1,15 @@
 @import url("https://fonts.googleapis.com/css?family=Courgette&display=swap");
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css");
 @import url("../css/fonts.css");
-ul, ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
   padding-left: 24px;
 }
 
-ul li, ol li {
+ul li,
+ol li {
   margin: 0;
   padding: 0;
 }
@@ -89,13 +91,32 @@ a:hover {
   }
 }
 
-ul, ol {
+.btn {
+  display: inline-block;
+  padding: 9px 30px;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  text-decoration: none;
+}
+
+.btn.btn-secondary {
+  border: 2px solid #fff;
+  color: #fff;
+  background: transparent;
+}
+
+ul,
+ol {
   margin: 0;
   padding: 0;
   padding-left: 24px;
 }
 
-ul li, ol li {
+ul li,
+ol li {
   margin: 0;
   padding: 0;
 }
@@ -175,6 +196,23 @@ a:hover {
   .navbar-nav.mr-auto.navigator .nav-item .home svg {
     display: none;
   }
+}
+
+.btn {
+  display: inline-block;
+  padding: 9px 30px;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  text-decoration: none;
+}
+
+.btn.btn-secondary {
+  border: 2px solid #fff;
+  color: #fff;
+  background: transparent;
 }
 
 .dksh-title-1 {
@@ -2299,6 +2337,275 @@ footer ul li a {
     padding-left: 40px;
     padding-right: 40px;
   }
+}
+
+.our-value-r .row {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.our-value-r .row .col {
+  height: 100%;
+  margin: 0;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.our-value-r .row .col:before {
+  content: '';
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  -webkit-transition-property: top, opacity;
+  transition-property: top, opacity;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.our-value-r .row .col .wrap {
+  margin-top: auto;
+  margin-bottom: 0;
+  width: 100%;
+}
+
+.our-value-r .row .col .wrap .cont-wrap {
+  font-size: 16px;
+  padding: 20px;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+  width: 100%;
+  height: 110px;
+  -webkit-transition-property: height;
+  transition-property: height;
+}
+
+.our-value-r .row .col .wrap .cont-wrap::before {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.7)));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+  display: block;
+  opacity: 0;
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  top: -142px;
+  width: 100%;
+}
+
+.our-value-r .row .col .wrap .cont-wrap h3 {
+  line-height: 1;
+  font-weight: 600;
+  font-size: 30px;
+  display: block;
+  opacity: 1;
+  position: relative;
+  top: 20px;
+  -webkit-transition-property: top, opacity, font-size;
+  transition-property: top, opacity, font-size;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+.our-value-r .row .col .wrap .cont-wrap .title {
+  line-height: 42px;
+  font-weight: 600;
+  font-size: 18px;
+  display: block;
+  opacity: 0;
+  position: relative;
+  top: 200px;
+  -webkit-transition-property: top, opacity;
+  transition-property: top, opacity;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+  margin-bottom: 20px;
+}
+
+.our-value-r .row .col .wrap .cont-wrap ul {
+  position: relative;
+  opacity: 0;
+  top: 200px;
+  -webkit-transition-property: top, opacity;
+  transition-property: top, opacity;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+  margin: 0px;
+  padding: 0;
+}
+
+.our-value-r .row .col .wrap .cont-wrap ul li {
+  padding-left: 0;
+  margin-left: 33px;
+  -webkit-transition-property: margin;
+  transition-property: margin;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.our-value-r .row .col .wrap .cont-wrap ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.our-value-r .row .col .wrap .cont-wrap ul li:hover {
+  margin-left: 53px;
+}
+
+.our-value-r .row .col .wrap .cont-wrap .btn {
+  opacity: 0;
+  position: relative;
+  top: 200px;
+  -webkit-transition-property: top, opacity;
+  transition-property: top, opacity;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+.our-value-r .row .col.purpose {
+  background: url(../images/purpose-2.jpg);
+  background-size: cover;
+  background-position: -250px center;
+}
+
+.our-value-r .row .col.vision, .our-value-r .row .col.hero-banner.integrity {
+  background: url(../images/vision.jpg);
+  background-size: cover;
+  background-position: -250px center;
+}
+
+.our-value-r .row .col.strategy {
+  background: url(../images/strategy.jpg);
+  background-size: cover;
+  background-position: -250px center;
+}
+
+.our-value-r .row .col.values {
+  background: url(../images/values.jpg);
+  background-size: cover;
+  background-position: -598px center;
+}
+
+.our-value-r .row .col.promise {
+  background: url(../images/promise.jpg);
+  background-size: cover;
+  background-position: -598px center;
+}
+
+.our-value-r .row .col:hover:before {
+  opacity: 1;
+  top: 100%;
+}
+
+.our-value-r .row .col:hover .cont-wrap {
+  height: auto;
+  -webkit-transition-delay: 0.15s;
+          transition-delay: 0.15s;
+}
+
+.our-value-r .row .col:hover .cont-wrap::before {
+  opacity: 1;
+}
+
+.our-value-r .row .col:hover .cont-wrap h3 {
+  top: 0;
+  opacity: 1;
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+  font-size: 20px;
+}
+
+.our-value-r .row .col:hover .cont-wrap .title {
+  top: 0;
+  opacity: 1;
+  -webkit-transition-delay: 0.25s;
+  transition-delay: 0.25s;
+  font-size: 34px;
+  color: #fff;
+}
+
+.our-value-r .row .col:hover .cont-wrap ul {
+  top: 0;
+  opacity: 1;
+  -webkit-transition-delay: 0.25s;
+  transition-delay: 0.25s;
+  font-size: 34px;
+  color: #fff;
+}
+
+.our-value-r .row .col:hover .cont-wrap .btn {
+  top: 0;
+  opacity: 1;
+  -webkit-transition-delay: 0.35s;
+  transition-delay: 0.35s;
+}
+
+.round-up .va-title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 120px;
+  color: #fff;
+}
+
+.round-up .va-title::after {
+  content: "";
+  display: inline-block;
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  z-index: -1;
+  height: 100%;
+  top: 0;
+  width: 750px;
+  -webkit-filter: blur(50px);
+          filter: blur(50px);
+  left: 0;
+}
+
+.round-up .purpose-bg {
+  background: url(../images/purpose-2.jpg) center center;
+  background-size: cover;
+}
+
+.round-up .vision-bg {
+  background: url(../images/vision.jpg) center -340px;
+  background-size: cover;
+}
+
+.round-up .strategy-bg {
+  background: url(../images/strategy.jpg) center center;
+  background-size: cover;
+}
+
+.round-up .values-bg {
+  background: url(../images/values.jpg) center center;
+  background-size: cover;
+}
+
+.round-up .values-bg {
+  background: url(../images/values.jpg) center center;
+  background-size: cover;
+}
+
+.round-up .promise-bg {
+  background: url(../images/promise.jpg) center center;
+  background-size: cover;
 }
 
 @-webkit-keyframes sdb05 {
