--- a/identity/ui/css/var.css
+++ b/identity/ui/css/var.css
@@ -1,10 +1,12 @@
-ul, ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
   padding-left: 24px;
 }
 
-ul li, ol li {
+ul li,
+ol li {
   margin: 0;
   padding: 0;
 }
@@ -84,5 +86,22 @@ a:hover {
   .navbar-nav.mr-auto.navigator .nav-item .home svg {
     display: none;
   }
+}
+
+.btn {
+  display: inline-block;
+  padding: 9px 30px;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  text-decoration: none;
+}
+
+.btn.btn-secondary {
+  border: 2px solid #fff;
+  color: #fff;
+  background: transparent;
 }
 /*# sourceMappingURL=var.css.map */
