--- a/identity/ui/css/purpose.scss
+++ b/identity/ui/css/purpose.scss
@@ -597,6 +597,30 @@ header {
   @media (max-width:767px) {
     height: 840px;
   }
+  &.roundup-banner {
+    background: url(../images/executive-committee.jpg);
+    background-size: cover;
+    background-position: top center;
+    .hero-text-wrap {
+      max-width: 1160px;
+      margin: auto;
+      margin-top: 100px;
+      padding: 0 20px;
+      .quote {
+        color: $black;
+        font-size: 46px;
+        font-family: 'Conv_ADOBE GARAMOND PRO ITALIC';
+        text-align: center;
+        line-height: 65px;
+      }
+      .position {
+        text-align: center;
+        color: $black;
+        font-size: 25px;
+        margin-bottom: 0;
+      }
+    }
+  }
 }
 
 @media (min-width:1024px) {
@@ -1600,6 +1624,8 @@ footer {
       margin: 0;
       padding: 20px;
       display: flex;
+      padding-bottom: 35px;
+      overflow: hidden;
       &:before {
         content: '';
         background: rgba(0, 0, 0, 0.3);
@@ -1611,6 +1637,19 @@ footer {
         z-index: 2;
         transition-property: top, opacity;
         transition-duration: $anim-speed;
+      }
+      &::after {
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        content: "";
+        -webkit-transition: all 20s;
+        -moz-transition: all 20s;
+        -o-transition: all 20s;
+        transition: all 20s;
       }
       .wrap {
         margin-top: auto;
@@ -1627,6 +1666,7 @@ footer {
           width: 100%;
           height: 110px;
           transition-property: height;
+          padding-bottom: 50px;
           &::before {
             background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
             display: block;
@@ -1697,34 +1737,48 @@ footer {
         }
       }
       &.purpose {
-        background: url(../images/purpose-2.jpg);
-        background-size: cover;
-        background-position: -250px center;
+        &:after {
+          background: url(../images/purpose-2.jpg);
+          background-size: cover;
+          background-position: -250px center;
+        }
       }
       &.vision {
-        background: url(../images/vision.jpg);
-        background-size: cover;
-        background-position: -250px center;
+        &:after {
+          background: url(../images/vision.jpg);
+          background-size: cover;
+          background-position: -250px center;
+        }
       }
       &.strategy {
-        background: url(../images/strategy.jpg);
-        background-size: cover;
-        background-position: -250px center;
+        &:after {
+          background: url(../images/strategy.jpg);
+          background-size: cover;
+          background-position: -250px center;
+        }
       }
       &.values {
-        background: url(../images/values.jpg);
-        background-size: cover;
-        background-position: -598px center;
+        &:after {
+          background: url(../images/values.jpg);
+          background-size: cover;
+          background-position: -598px center;
+        }
       }
       &.promise {
-        background: url(../images/promise.jpg);
-        background-size: cover;
-        background-position: -598px center;
+        &:after {
+          background: url(../images/promise.jpg);
+          background-size: cover;
+          background-position: -598px center;
+        }
       }
       &:hover {
         &:before {
           opacity: 1;
           top: 100%;
+        }
+        &:after {
+          transform: scale(1.5);
+          transition-delay: 0.15s;
         }
         .cont-wrap {
           height: auto;
@@ -1767,48 +1821,180 @@ footer {
   }
 }
 
-.round-up {
-  .va-title {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 120px;
-    color: #fff;
-    &::after {
-      content: "";
-      display: inline-block;
-      background: rgba(0, 0, 0, .2);
-      position: absolute;
-      z-index: -1;
-      height: 100%;
-      top: 0;
-      width: 750px;
-      filter: blur(50px);
-      left: 0;
+.fav-movements {
+  background: $dksh-r;
+  .container {
+    height: 100%;
+  }
+  .row {
+    height: 100%;
+    [class^="col-"] {
+      margin: auto;
     }
   }
-  .purpose-bg {
-    background: url(../images/purpose-2.jpg) center center;
-    background-size: cover;
+}
+
+.checklist {
+  background: #fff;
+  padding: 100px 0;
+  .dksh-title-4 {
+    margin-bottom: 70px;
   }
-  .vision-bg {
-    background: url(../images/vision.jpg) center -340px;
-    background-size: cover;
+  .content-wrap {
+    padding: 20px;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 50px;
+    .icon {
+      background: $dksh-c;
+      display: block;
+      width: 124px;
+      height: 124px;
+      text-align: center;
+      line-height: 124px;
+      color: $black;
+      border-radius: 100%;
+      border-bottom-left-radius: 0;
+      margin-bottom: 20px;
+      -webkit-transition: .3s ease-in-out;
+      -moz-transition: .3s ease-in-out;
+      -o-transition: .3s ease-in-out;
+      transition: .3s ease-in-out;
+      &::before {
+        font-size: 43px;
+      }
+      &.icon-values {
+        &::before {
+          font-size: 62px;
+        }
+      }
+    }
+    h4 {
+      color: $dksh-r;
+      font-size: 25px;
+    }
+    p {
+      font-size: 20px;
+    }
+    &:hover {
+      .icon {
+        background: $dksh-r;
+        -webkit-transform: translate(0, -15px);
+        -moz-transform: translate(0, -15px);
+        -o-transform: translate(0, -15px);
+        -ms-transform: translate(0, -15px);
+        transform: translate(0, -15px);
+        &::before {
+          color: #fff;
+        }
+      }
+    }
   }
-  .strategy-bg {
-    background: url(../images/strategy.jpg) center center;
-    background-size: cover;
+}
+
+.video-wall-section {
+  background: $dksh-r;
+  display: flex;
+  height: 100%;
+  text-align: center;
+  .wrap {
+    width: 800px;
+    margin: auto;
+    .card-anim {
+      display: block;
+      text-decoration: none;
+      position: relative;
+      height: 300px;
+      margin-top: 50px;
+      span {
+        position: absolute;
+        transform-origin: center 274px;
+        transition: all .6s linear;
+        display: block;
+        width: 120px;
+        margin-left: -60px;
+        left: 50%;
+        &:first-child {
+          transform: rotate(25deg);
+        }
+        &:nth-child(2) {
+          transform: rotate(15deg);
+        }
+        &:nth-child(4) {
+          transform: rotate(-11deg);
+        }
+        &:last-child {
+          transform: rotate(-25deg);
+        }
+      }
+      &:hover {
+        span {
+          &:first-child {
+            transform: rotate(35deg);
+          }
+          &:nth-child(2) {
+            transform: rotate(20deg);
+          }
+          &:nth-child(4) {
+            transform: rotate(-18deg);
+          }
+          &:last-child {
+            transform: rotate(-35deg);
+          }
+        }
+      }
+    }
   }
-  .values-bg {
-    background: url(../images/values.jpg) center center;
-    background-size: cover;
+}
+
+.promise-section {
+  height: 100%;
+  background: url(../images/promise-roundup.jpg);
+}
+
+.video-wall-header {
+  background: $dksh-r;
+  padding: 160px 0 100px;
+}
+
+.breadcrumb {
+  background-color: darken($dksh-r, 5);
+  border-radius: 0;
+  color: #fff;
+  a {
+    color: #fff;
+    text-decoration: none;
   }
-  .values-bg {
-    background: url(../images/values.jpg) center center;
-    background-size: cover;
+}
+
+.video-wall {
+  .container {
+    .filtering {
+      display: block;
+      margin: 0;
+      padding: 0;
+      margin-bottom: 50px;
+      cursor: pointer;
+      li {
+        display: inline-block;
+        list-style: none;
+        padding: 20px;
+        background: $grey;
+        color: #fff;
+        margin-right: 20px;
+        &.active {
+          background: $dksh-r;
+          color: #fff;
+        }
+      }
+    }
   }
-  .promise-bg {
-    background: url(../images/promise.jpg) center center;
-    background-size: cover;
+  .gallery {
+    .item-img {
+      img {
+        width: 100%;
+      }
+    }
   }
 }
 
