--- a/identity/ui/css/purpose.css
+++ b/identity/ui/css/purpose.css
@@ -2766,7 +2766,7 @@ footer ul li a {
 
 .video-wall-header {
   background: #ab1032;
-  padding: 160px 0 100px;
+  padding: 160px 0 60px;
 }
 
 .breadcrumb {
@@ -2776,8 +2776,17 @@ footer ul li a {
 }
 
 .breadcrumb a {
+  display: inline-block;
+  vertical-align: middle;
   color: #fff;
   text-decoration: none;
+}
+
+.breadcrumb a span {
+  display: inline-block;
+  vertical-align: baseline;
+  font-size: 12px;
+  margin-right: 10px;
 }
 
 .video-wall .container .filtering {
@@ -2785,25 +2794,56 @@ footer ul li a {
   margin: 0;
   padding: 0;
   margin-bottom: 50px;
+  margin-top: 100px;
   cursor: pointer;
 }
 
 .video-wall .container .filtering li {
   display: inline-block;
   list-style: none;
-  padding: 20px;
-  background: #98989A;
-  color: #fff;
+  padding: 10px 20px;
+  background: #fff;
+  color: #98989A;
   margin-right: 20px;
+  border: solid 2px #98989A;
 }
 
 .video-wall .container .filtering li.active {
-  background: #ab1032;
-  color: #fff;
+  border-color: #ab1032;
+  color: #98989A;
 }
 
-.video-wall .gallery .item-img img {
+.video-wall .gallery .grid-item {
+  margin-bottom: 25px;
+}
+
+.video-wall .gallery .grid-item .video-wrap {
+  border: 10px solid #fff;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  position: relative;
+}
+
+.video-wall .gallery .grid-item .video-wrap video {
   width: 100%;
+  vertical-align: bottom;
+}
+
+.video-wall .gallery .grid-item .video-wrap .name {
+  padding: 10px 20px;
+  font-size: 17px;
+  color: #fff;
+  background: #535353;
+}
+
+.video-wall .gallery .grid-item:hover .video-wrap {
+  -webkit-box-shadow: 0 0 23px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 23px rgba(0, 0, 0, 0.3);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  z-index: 5;
 }
 
 @-webkit-keyframes sdb05 {
