--- a/identity/ui/css/purpose.css
+++ b/identity/ui/css/purpose.css
@@ -737,6 +737,7 @@ header.purpose-nav.fixed .navbar-brand svg {
   position: absolute;
   top: -53px;
   left: 0;
+  white-space: nowrap;
 }
 
 @media (max-width: 1680px) {
@@ -996,9 +997,10 @@ header.purpose-nav.fixed .navbar-brand svg {
 }
 
 .hero-banner.roundup-banner {
-  background: url(../images/executive-committee.jpg);
-  background-size: cover;
-  background-position: top center;
+  background-size: cover !important;
+  background-position: center top !important;
+  background: url(../images/executive-committee.jpg) #dae1ed;
+  background-repeat: no-repeat;
 }
 
 .hero-banner.roundup-banner .hero-text-wrap {
@@ -1021,6 +1023,50 @@ header.purpose-nav.fixed .navbar-brand svg {
   color: #535353;
   font-size: 25px;
   margin-bottom: 0;
+}
+
+@media (max-width: 1024px) {
+  .hero-banner.roundup-banner {
+    background-size: 100% !important;
+    background-position: bottom !important;
+  }
+  .hero-banner.roundup-banner .hero-text-wrap .quote {
+    font-size: 37px;
+  }
+}
+
+@media (max-width: 960px) {
+  .hero-banner.roundup-banner {
+    background: url(../images/executive-committee-p.jpg) #e9f1f4;
+    background-size: 100%;
+    height: 100%;
+  }
+  .hero-banner.roundup-banner .hero-text-wrap {
+    margin-top: 200px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .hero-banner.roundup-banner {
+    background-position: bottom;
+    background-repeat: no-repeat;
+    height: 930px;
+  }
+  .hero-banner.roundup-banner .hero-text-wrap {
+    margin-top: 120px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .hero-banner.roundup-banner .hero-text-wrap .quote {
+    font-size: 37px;
+    line-height: inherit;
+  }
+  .hero-banner.roundup-banner .hero-text-wrap .name {
+    font-size: 35px;
+    line-height: 50px;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -2532,10 +2578,22 @@ footer ul li a {
   background-position: -250px center;
 }
 
+@media (max-width: 1024px) {
+  .our-value-r .row .col.purpose:after {
+    background-position: left center;
+  }
+}
+
 .our-value-r .row .col.vision:after, .our-value-r .row .col.hero-banner.integrity:after {
   background: url(../images/vision.jpg);
   background-size: cover;
-  background-position: -250px center;
+  background-position: -480px center;
+}
+
+@media (max-width: 1024px) {
+  .our-value-r .row .col.vision:after, .our-value-r .row .col.hero-banner.integrity:after {
+    background-position: -150px center;
+  }
 }
 
 .our-value-r .row .col.strategy:after {
@@ -2544,10 +2602,22 @@ footer ul li a {
   background-position: -250px center;
 }
 
+@media (max-width: 1024px) {
+  .our-value-r .row .col.strategy:after {
+    background-position: -150px center;
+  }
+}
+
 .our-value-r .row .col.values:after {
   background: url(../images/values.jpg);
   background-size: cover;
   background-position: -598px center;
+}
+
+@media (max-width: 1024px) {
+  .our-value-r .row .col.values:after {
+    background-position: right center;
+  }
 }
 
 .our-value-r .row .col.promise:after {
@@ -2556,63 +2626,151 @@ footer ul li a {
   background-position: -598px center;
 }
 
-.our-value-r .row .col:hover:before {
-  opacity: 1;
-  top: 100%;
+@media (max-width: 1024px) {
+  .our-value-r .row .col.promise:after {
+    background-position: right center;
+  }
 }
 
-.our-value-r .row .col:hover:after {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
-  -webkit-transition-delay: 0.15s;
-          transition-delay: 0.15s;
+@media (min-width: 1025px) {
+  .our-value-r .row .col:hover:before {
+    opacity: 1;
+    top: 100%;
+  }
+  .our-value-r .row .col:hover:after {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    -webkit-transition-delay: 0.15s;
+            transition-delay: 0.15s;
+  }
+  .our-value-r .row .col:hover .cont-wrap {
+    height: auto;
+    -webkit-transition-delay: 0.15s;
+            transition-delay: 0.15s;
+  }
+  .our-value-r .row .col:hover .cont-wrap::before {
+    opacity: 1;
+  }
+  .our-value-r .row .col:hover .cont-wrap h3 {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.15s;
+    transition-delay: 0.15s;
+    font-size: 20px;
+  }
+  .our-value-r .row .col:hover .cont-wrap .title {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+    font-size: 34px;
+    color: #fff;
+  }
+  .our-value-r .row .col:hover .cont-wrap ul {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+    font-size: 34px;
+    color: #fff;
+  }
+  .our-value-r .row .col:hover .cont-wrap .btn {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.35s;
+    transition-delay: 0.35s;
+  }
 }
 
-.our-value-r .row .col:hover .cont-wrap {
-  height: auto;
-  -webkit-transition-delay: 0.15s;
-          transition-delay: 0.15s;
+@media (max-width: 1024px) {
+  .our-value-r .row .col .wrap:before {
+    opacity: 1;
+    top: 100%;
+  }
+  .our-value-r .row .col .wrap:after {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    -webkit-transition-delay: 0.15s;
+            transition-delay: 0.15s;
+  }
+  .our-value-r .row .col .wrap .cont-wrap {
+    height: auto;
+    -webkit-transition-delay: 0.15s;
+            transition-delay: 0.15s;
+  }
+  .our-value-r .row .col .wrap .cont-wrap::before {
+    opacity: 1;
+  }
+  .our-value-r .row .col .wrap .cont-wrap h3 {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.15s;
+    transition-delay: 0.15s;
+    font-size: 20px;
+  }
+  .our-value-r .row .col .wrap .cont-wrap .title {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+    font-size: 34px;
+    color: #fff;
+  }
+  .our-value-r .row .col .wrap .cont-wrap ul {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+    font-size: 34px;
+    color: #fff;
+  }
+  .our-value-r .row .col .wrap .cont-wrap .btn {
+    top: 0;
+    opacity: 1;
+    -webkit-transition-delay: 0.35s;
+    transition-delay: 0.35s;
+  }
 }
 
-.our-value-r .row .col:hover .cont-wrap::before {
-  opacity: 1;
+@media (max-width: 1024px) {
+  .our-value-r {
+    height: 1500px;
+  }
+  .our-value-r .row .col {
+    height: 33%;
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+  .our-value-r .row .col:last-child {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
-.our-value-r .row .col:hover .cont-wrap h3 {
-  top: 0;
-  opacity: 1;
-  -webkit-transition-delay: 0.15s;
-  transition-delay: 0.15s;
-  font-size: 20px;
-}
-
-.our-value-r .row .col:hover .cont-wrap .title {
-  top: 0;
-  opacity: 1;
-  -webkit-transition-delay: 0.25s;
-  transition-delay: 0.25s;
-  font-size: 34px;
-  color: #fff;
-}
-
-.our-value-r .row .col:hover .cont-wrap ul {
-  top: 0;
-  opacity: 1;
-  -webkit-transition-delay: 0.25s;
-  transition-delay: 0.25s;
-  font-size: 34px;
-  color: #fff;
-}
-
-.our-value-r .row .col:hover .cont-wrap .btn {
-  top: 0;
-  opacity: 1;
-  -webkit-transition-delay: 0.35s;
-  transition-delay: 0.35s;
+@media (max-width: 767px) {
+  .our-value-r {
+    height: initial;
+  }
+  .our-value-r .row .col {
+    height: 600px;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .our-value-r .row .col:last-child {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .fav-movements {
   background: #ab1032;
+}
+
+@media (max-width: 960px) {
+  .fav-movements {
+    padding-top: 25%;
+    padding-bottom: 25%;
+  }
 }
 
 .fav-movements .container {
@@ -2627,9 +2785,15 @@ footer ul li a {
   margin: auto;
 }
 
+.fav-movements .row .col-lg-7 video {
+  border: 15px solid #fff;
+  width: 100%;
+}
+
 .checklist {
   background: #fff;
   padding: 100px 0;
+  height: initial;
 }
 
 .checklist .dksh-title-4 {
@@ -2699,7 +2863,7 @@ footer ul li a {
   margin: auto;
 }
 
-.video-wall-section .wrap .card-anim {
+.video-wall-section .wrap .button-wrap .card-anim {
   display: block;
   text-decoration: none;
   position: relative;
@@ -2707,7 +2871,7 @@ footer ul li a {
   margin-top: 50px;
 }
 
-.video-wall-section .wrap .card-anim span {
+.video-wall-section .wrap .button-wrap .card-anim span {
   position: absolute;
   -webkit-transform-origin: center 274px;
           transform-origin: center 274px;
@@ -2719,49 +2883,51 @@ footer ul li a {
   left: 50%;
 }
 
-.video-wall-section .wrap .card-anim span:first-child {
+.video-wall-section .wrap .button-wrap .card-anim span:first-child {
   -webkit-transform: rotate(25deg);
           transform: rotate(25deg);
 }
 
-.video-wall-section .wrap .card-anim span:nth-child(2) {
+.video-wall-section .wrap .button-wrap .card-anim span:nth-child(2) {
   -webkit-transform: rotate(15deg);
           transform: rotate(15deg);
 }
 
-.video-wall-section .wrap .card-anim span:nth-child(4) {
+.video-wall-section .wrap .button-wrap .card-anim span:nth-child(4) {
   -webkit-transform: rotate(-11deg);
           transform: rotate(-11deg);
 }
 
-.video-wall-section .wrap .card-anim span:last-child {
+.video-wall-section .wrap .button-wrap .card-anim span:last-child {
   -webkit-transform: rotate(-25deg);
           transform: rotate(-25deg);
 }
 
-.video-wall-section .wrap .card-anim:hover span:first-child {
+.video-wall-section .wrap .button-wrap:hover .card-anim span:first-child {
   -webkit-transform: rotate(35deg);
           transform: rotate(35deg);
 }
 
-.video-wall-section .wrap .card-anim:hover span:nth-child(2) {
+.video-wall-section .wrap .button-wrap:hover .card-anim span:nth-child(2) {
   -webkit-transform: rotate(20deg);
           transform: rotate(20deg);
 }
 
-.video-wall-section .wrap .card-anim:hover span:nth-child(4) {
+.video-wall-section .wrap .button-wrap:hover .card-anim span:nth-child(4) {
   -webkit-transform: rotate(-18deg);
           transform: rotate(-18deg);
 }
 
-.video-wall-section .wrap .card-anim:hover span:last-child {
+.video-wall-section .wrap .button-wrap:hover .card-anim span:last-child {
   -webkit-transform: rotate(-35deg);
           transform: rotate(-35deg);
 }
 
 .promise-section {
-  height: 100%;
+  height: inherit;
   background: url(../images/promise-roundup.jpg);
+  background-size: cover;
+  background-position: left center;
 }
 
 .video-wall-header {
