--- a/identity/ui/css/purpose.scss
+++ b/identity/ui/css/purpose.scss
@@ -367,6 +367,7 @@ header {
           position: absolute;
           top: -53px;
           left: 0;
+          white-space: nowrap;
           @media (max-width: 1680px) {
             font-size: 20px;
           }
@@ -598,9 +599,10 @@ header {
     height: 840px;
   }
   &.roundup-banner {
-    background: url(../images/executive-committee.jpg);
-    background-size: cover;
-    background-position: top center;
+    background-size: cover !important;
+    background-position: center top !important;
+    background: url(../images/executive-committee.jpg) #dae1ed;
+    background-repeat: no-repeat;
     .hero-text-wrap {
       max-width: 1160px;
       margin: auto;
@@ -618,6 +620,43 @@ header {
         color: $black;
         font-size: 25px;
         margin-bottom: 0;
+      }
+    }
+    @media (max-width: 1024px) {
+      background-size: 100% !important;
+      background-position: bottom !important;
+      .hero-text-wrap {
+        .quote {
+          font-size: 37px;
+        }
+      }
+    }
+    @media (max-width: 960px) {
+      background: url(../images/executive-committee-p.jpg) #e9f1f4;
+      background-size: 100%;
+      height: 100%;
+      .hero-text-wrap {
+        margin-top: 200px;
+        margin-left: 30px;
+        margin-right: 30px;
+      }
+    }
+    @media (max-width: 767px) {
+      background-position: bottom;
+      background-repeat: no-repeat;
+      height: 930px;
+      .hero-text-wrap {
+        margin-top: 120px;
+        margin-left: 15px;
+        margin-right: 15px;
+        .quote {
+          font-size: 37px;
+          line-height: inherit;
+        }
+        .name {
+          font-size: 35px;
+          line-height: 50px;
+        }
       }
     }
   }
@@ -1741,13 +1780,19 @@ footer {
           background: url(../images/purpose-2.jpg);
           background-size: cover;
           background-position: -250px center;
+          @media (max-width: 1024px) {
+            background-position: left center;
+          }
         }
       }
       &.vision {
         &:after {
           background: url(../images/vision.jpg);
           background-size: cover;
-          background-position: -250px center;
+          background-position: -480px center;
+          @media (max-width: 1024px) {
+            background-position: -150px center;
+          }
         }
       }
       &.strategy {
@@ -1755,6 +1800,9 @@ footer {
           background: url(../images/strategy.jpg);
           background-size: cover;
           background-position: -250px center;
+          @media (max-width: 1024px) {
+            background-position: -150px center;
+          }
         }
       }
       &.values {
@@ -1762,6 +1810,9 @@ footer {
           background: url(../images/values.jpg);
           background-size: cover;
           background-position: -598px center;
+          @media (max-width: 1024px) {
+            background-position: right center;
+          }
         }
       }
       &.promise {
@@ -1769,52 +1820,129 @@ footer {
           background: url(../images/promise.jpg);
           background-size: cover;
           background-position: -598px center;
+          @media (max-width: 1024px) {
+            background-position: right center;
+          }
         }
       }
-      &:hover {
-        &:before {
-          opacity: 1;
-          top: 100%;
-        }
-        &:after {
-          transform: scale(1.5);
-          transition-delay: 0.15s;
-        }
-        .cont-wrap {
-          height: auto;
-          transition-delay: 0.15s;
-          &::before {
+      @media (min-width:1025px) {
+        &:hover {
+          &:before {
             opacity: 1;
+            top: 100%;
           }
-          h3 {
-            top: 0;
-            opacity: 1;
-            -webkit-transition-delay: 0.15s;
+          &:after {
+            transform: scale(1.5);
             transition-delay: 0.15s;
-            font-size: 20px;
           }
-          .title {
-            top: 0;
+          .cont-wrap {
+            height: auto;
+            transition-delay: 0.15s;
+            &::before {
+              opacity: 1;
+            }
+            h3 {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.15s;
+              transition-delay: 0.15s;
+              font-size: 20px;
+            }
+            .title {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.25s;
+              transition-delay: 0.25s;
+              font-size: 34px;
+              color: #fff;
+            }
+            ul {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.25s;
+              transition-delay: 0.25s;
+              font-size: 34px;
+              color: #fff;
+            }
+            .btn {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.35s;
+              transition-delay: 0.35s;
+            }
+          }
+        }
+      }
+      @media (max-width:1024px) {
+        .wrap {
+          &:before {
             opacity: 1;
-            -webkit-transition-delay: 0.25s;
-            transition-delay: 0.25s;
-            font-size: 34px;
-            color: #fff;
+            top: 100%;
           }
-          ul {
-            top: 0;
-            opacity: 1;
-            -webkit-transition-delay: 0.25s;
-            transition-delay: 0.25s;
-            font-size: 34px;
-            color: #fff;
+          &:after {
+            transform: scale(1.5);
+            transition-delay: 0.15s;
           }
-          .btn {
-            top: 0;
-            opacity: 1;
-            -webkit-transition-delay: 0.35s;
-            transition-delay: 0.35s;
+          .cont-wrap {
+            height: auto;
+            transition-delay: 0.15s;
+            &::before {
+              opacity: 1;
+            }
+            h3 {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.15s;
+              transition-delay: 0.15s;
+              font-size: 20px;
+            }
+            .title {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.25s;
+              transition-delay: 0.25s;
+              font-size: 34px;
+              color: #fff;
+            }
+            ul {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.25s;
+              transition-delay: 0.25s;
+              font-size: 34px;
+              color: #fff;
+            }
+            .btn {
+              top: 0;
+              opacity: 1;
+              -webkit-transition-delay: 0.35s;
+              transition-delay: 0.35s;
+            }
           }
+        }
+      }
+    }
+  }
+  @media (max-width:1024px) {
+    height: 1500px;
+    .row {
+      .col {
+        height: 33%;
+        flex-basis: 50%;
+        &:last-child {
+          flex-basis: 100%;
+        }
+      }
+    }
+  }
+  @media (max-width:767px) {
+    height: initial;
+    .row {
+      .col {
+        height: 600px;
+        flex-basis: 100%;
+        &:last-child {
+          flex-basis: 100%;
         }
       }
     }
@@ -1822,6 +1950,10 @@ footer {
 }
 
 .fav-movements {
+  @media (max-width: 960px) {
+    padding-top: 25%;
+    padding-bottom: 25%;
+  }
   background: $dksh-r;
   .container {
     height: 100%;
@@ -1831,12 +1963,19 @@ footer {
     [class^="col-"] {
       margin: auto;
     }
+    .col-lg-7 {
+      video {
+        border: 15px solid #fff;
+        width: 100%;
+      }
+    }
   }
 }
 
 .checklist {
   background: #fff;
   padding: 100px 0;
+  height: initial;
   .dksh-title-4 {
     margin-bottom: 70px;
   }
@@ -1900,46 +2039,50 @@ footer {
   .wrap {
     width: 800px;
     margin: auto;
-    .card-anim {
-      display: block;
-      text-decoration: none;
-      position: relative;
-      height: 300px;
-      margin-top: 50px;
-      span {
-        position: absolute;
-        transform-origin: center 274px;
-        transition: all .6s linear;
+    .button-wrap {
+      .card-anim {
         display: block;
-        width: 120px;
-        margin-left: -60px;
-        left: 50%;
-        &:first-child {
-          transform: rotate(25deg);
-        }
-        &:nth-child(2) {
-          transform: rotate(15deg);
-        }
-        &:nth-child(4) {
-          transform: rotate(-11deg);
-        }
-        &:last-child {
-          transform: rotate(-25deg);
+        text-decoration: none;
+        position: relative;
+        height: 300px;
+        margin-top: 50px;
+        span {
+          position: absolute;
+          transform-origin: center 274px;
+          transition: all .6s linear;
+          display: block;
+          width: 120px;
+          margin-left: -60px;
+          left: 50%;
+          &:first-child {
+            transform: rotate(25deg);
+          }
+          &:nth-child(2) {
+            transform: rotate(15deg);
+          }
+          &:nth-child(4) {
+            transform: rotate(-11deg);
+          }
+          &:last-child {
+            transform: rotate(-25deg);
+          }
         }
       }
       &:hover {
-        span {
-          &:first-child {
-            transform: rotate(35deg);
-          }
-          &:nth-child(2) {
-            transform: rotate(20deg);
-          }
-          &:nth-child(4) {
-            transform: rotate(-18deg);
-          }
-          &:last-child {
-            transform: rotate(-35deg);
+        .card-anim {
+          span {
+            &:first-child {
+              transform: rotate(35deg);
+            }
+            &:nth-child(2) {
+              transform: rotate(20deg);
+            }
+            &:nth-child(4) {
+              transform: rotate(-18deg);
+            }
+            &:last-child {
+              transform: rotate(-35deg);
+            }
           }
         }
       }
@@ -1948,8 +2091,10 @@ footer {
 }
 
 .promise-section {
-  height: 100%;
+  height: inherit;
   background: url(../images/promise-roundup.jpg);
+  background-size: cover;
+  background-position: left center;
 }
 
 .video-wall-header {
