--- a/identity/ui/css/purpose.scss
+++ b/identity/ui/css/purpose.scss
@@ -2150,7 +2150,7 @@ footer {
 .promise-section {
   position: relative;
   z-index: 101;
-  height: inherit;
+  height: auto;
   background: url(../images/promise-roundup.jpg);
   background-size: cover;
   background-position: left center;
